tests/suites/0_stateless/20+_others/20_0002_planner_v2_display_error.result
ERROR 1105 (HY000) at line 4: Code: 1065, displayText = error: 
  --> SQL:1:8
  |
1 | select aa from t
  |        ^^ column doesn't exist

.
ERROR 1105 (HY000) at line 5: Code: 1065, displayText = error: 
  --> SQL:1:1
  |
1 | select *
  | ^^^^^^^^ SELECT * with no tables specified is not valid

.
ERROR 1105 (HY000) at line 8: Code: 1065, displayText = error: 
  --> SQL:1:64
  |
1 | select a as b from t1 intersect select a as b from t2 order by a
  |                                                                ^ column doesn't exist

.
